pseudocode and comments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel = "stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+    <title>Rock, Paper, Scissors</title>
 </head>
 <body>
 <!-- header with title "Rock Paper Scissors"
@@ -13,8 +15,7 @@
      current score below selection images
      buttons for user to choose rock, paper or scissors
      footer
-
 -->
-    
+
 </body>
 </html>
