css finished - project mostly finished at this point

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" type="text/css" href="style.css">
 
-    <title>Rock, Paper, Scissors</title>
+    <title>rock, paper, scissors</title>
 </head>
 <body>
     <!-- header with title "Rock Paper Scissors"-->
     <div class="header">
-        <h1>Rock, Paper, Scissors!</h1>
+        <h1>rock, paper, scissors</h1>
     </div>
     <!--instructions + win conditions 
      round results above selection images (change instructions + win conditions with js) -->
     <div class="main">
         <div class="textBox">
-            <h2 id="h2">Make a choice to start the game</h2>
-            <h3 id="h3">First player to win 5 rounds WINS</h3>
+            <h2 id="h2">make a choice to start the game</h2>
+            <h3 id="h3">first player to win 5 rounds WINS</h3>
         </div>
      <!-- image displaying user selection + image displaying CPU selection 
         current score below selection images-->
@@ -33,14 +33,14 @@
         </div>
   <!-- buttons for user to choose rock, paper or scissors -->
         <div class="choiceButtons">
-            <button id="rock">rock</button>
-            <button id="paper">paper</button>
-            <button id="scissors">scissors</button>
+            <button id="rock" style="background: url('./img/rock.png')">rock</button>
+            <button id="paper" style="background: url('./img/paper.jpg');background-size: 100% 100%">paper</button>
+            <button id="scissors" style="background: url('./img/scissors.jpg'); background-size: 100% 100%">scissors</button>
         </div>
     </div>  
     <!-- footer -->
     <div class="footer">
-        <p>made by will</p>
+        <p>made by william wartick</p>
     </div>
 </body>
 <script src="script.js"></script>
