--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="selectedBox">
             <div class="userBox">
                 <img src="./img/what.jpg" id="userChoice">
-                <p id="userScore">0</p>
+                <p id="userScore">You : 0</p>
            </div> 
            <div class="computerBox">
                 <img src="./img/what.jpg" id="computerChoice">
-                <p id="computerScore">0</p>
+                <p id="computerScore">Computer: 0</p>
            </div>
         </div>
   <!-- buttons for user to choose rock, paper or scissors -->
